--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,20 @@
 ivy.jar=/usr/share/java/apache-ivy/ivy.jar
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:localhost:3306
+initdb.file=${basedir}/initdb.sql
+application.name=notebook
+
+# build dir
+build.home=${basedir}/build
+build.war.home=${build.home}/war
+build.classes.home=${build.home}/classes
+build.lib.home=${build.home}/lib
+db.jar=${build.lib.home}/mysql-connector-java.jar
+build.war.file=${build.war.home}/${application.name}.war
+
+
+src.main=${basedir}/src/main/java
+src.resources=${basedir}/src/main/resources
+src.tests=src/test/java
+
+# paramener is used in configuration location path: $IDR_CONFIG_HOME/${version}/
+version=2.8
+version.file=${build.classes.home}/version.properties
