--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+   <servlet>
+      <servlet-name>guestbook</servlet-name>
+      <servlet-class>notebook.HomeServlet</servlet-class>
+   </servlet>
+   <servlet-mapping>
+      <servlet-name>guestbook</servlet-name>
+      <url-pattern>/guestbook</url-pattern>
+   </servlet-mapping>
 </web-app>
